--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+home.ds.m.host=127.0.0.1:3306
+home.ds.m.username=root
+home.ds.m.password=123456
+home.ds.m.schema=fle_development
 
+home.ds.r.host=192.168.0.229:3306
+home.ds.r.username=fle_development
+home.ds.r.password=123456
+home.ds.r.schema=fle_development
